--- a/BandwidthConversion WatchKit App/Base.lproj/Interface.storyboard
+++ b/BandwidthConversion WatchKit App/Base.lproj/Interface.storyboard
@@ -1,16 +1,74 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6724" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9019"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="BandwidthConversion_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" id="SJh-bY-ri7">
+                            <items>
+                                <label alignment="center" text="Pick a speed in Mbps" textAlignment="center" id="II9-bw-J4X"/>
+                                <picker height="100" alignment="left" verticalAlignment="bottom" id="roH-fa-fgx">
+                                    <connections>
+                                        <action selector="pickerWasClicked:" destination="AgC-eL-Hgc" id="lu6-yB-Uqh"/>
+                                    </connections>
+                                </picker>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="RD6-0v-QUc">
+                            <items>
+                                <button width="1" alignment="left" title="Next Page" id="Y8B-f6-TFg">
+                                    <connections>
+                                        <action selector="nextPagePressed" destination="AgC-eL-Hgc" id="fhF-le-VAI"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="thePicker" destination="roH-fa-fgx" id="g1n-KF-aZl"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--screen2-->
+        <scene sceneID="c4J-KV-bLD">
+            <objects>
+                <controller identifier="screen2" id="ESg-Eg-6Xc" customClass="Screen2IC" customModule="BandwidthConversion_WatchKit_Extension">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" id="kGZ-Vk-g6Q">
+                            <items>
+                                <label alignment="center" text="Label" textAlignment="center" id="u2v-HP-NwR"/>
+                                <table alignment="left" id="PJM-nW-n0u">
+                                    <items>
+                                        <tableRow identifier="cell" id="eJ2-dq-RDg" customClass="SpeedRow" customModule="BandwidthConversion_WatchKit_Extension">
+                                            <group key="rootItem" width="1" alignment="left" id="y98-VA-H9r">
+                                                <items>
+                                                    <label alignment="center" verticalAlignment="center" text="Label" textAlignment="center" id="Lek-j3-8L1"/>
+                                                </items>
+                                            </group>
+                                            <connections>
+                                                <outlet property="speedLabel" destination="Lek-j3-8L1" id="DP0-63-xXu"/>
+                                            </connections>
+                                        </tableRow>
+                                    </items>
+                                </table>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="MbpsLabel" destination="u2v-HP-NwR" id="llY-Le-hnc"/>
+                        <outlet property="theTable" destination="PJM-nW-n0u" id="6ZU-iR-M6U"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="440" y="338"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -31,7 +89,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="BandwidthConversion_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
